# retrodevhelper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml  macOS-release.yml  manual.yml
ci/: build-universal.sh
docs/: README.md  docusaurus.config.js  package-lock.json  package.json
docs/docs/: build.md  first-project.md  getting-started.md  getting-started.mdx  initialize.md  run.md
docs/docs/sega-genesis/: _category_.json  emulators.md  sdks.md
docs/src/components/HomepageFeatures/: index.js
docs/src/pages/: index.js
locales/: en.yml
src/: main.rs
src/genesis/: build.rs  create.rs  mod.rs  run.rs
templates/sgdk/src/: main.c
