[package]
name = "retrodevhelper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.6.2"
once_cell = "1.10.0"
rust-i18n = "1"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
spinoff = "0.7.0"
